Fase 1: Score, DTOs, MatchMapper, Match actualizado, FootballDataClient mejorado