@@ -3,34 +3,31 @@ package com.josegabrielmarves.footballpredictor.api;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 
+/**
+ * Cliente HTTP para football-data.org v4.
+ */
 public class FootballDataClient {
 
     private static final String BASE_URL = "https://api.football-data.org/v4/";
-    private static final String API_KEY = "TU_API_KEY_AQUI";
+    private static final String API_KEY  = "TU_API_KEY_AQUI"; // reemplazar cuando tengas la key
 
-    public String getMatches() {
-
+    public String getWorldCupMatches() {
         try {
-            URL url = new URL(BASE_URL + "matches");
-
-            HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+            var url  = URI.create(BASE_URL + "competitions/WC/matches").toURL();
+            var conn = (HttpURLConnection) url.openConnection();
 
             conn.setRequestMethod("GET");
             conn.setRequestProperty("X-Auth-Token", API_KEY);
 
             int responseCode = conn.getResponseCode();
-
             if (responseCode != 200) {
-                return "Error: " + responseCode;
+                return "Error HTTP: " + responseCode;
             }
 
-            BufferedReader reader = new BufferedReader(
-                    new InputStreamReader(conn.getInputStream())
-            );
-
-            StringBuilder response = new StringBuilder();
+            var reader   = new BufferedReader(new InputStreamReader(conn.getInputStream()));
+            var response = new StringBuilder();
             String line;
 
             while ((line = reader.readLine()) != null) {
@@ -38,7 +35,6 @@ public class FootballDataClient {
             }
 
             reader.close();
-
             return response.toString();
 
         } catch (Exception e) {
